# neuronx-rust

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  al2023build.sh  build-and-test.yaml  build.rs
.github/workflows/: build-and-test.yaml
cxx/include/: model.h  runtime.h  tensor.h
cxx/include/nrt/: nec.h  nrt.h  nrt_experimental.h  nrt_profile.h  nrt_status.h  nrt_sys_trace.h
cxx/include/nrt/nds/: neuron_ds.h
cxx/src/: model.cc  tensor.cc
src/: data.rs  error.rs  lib.rs  macros.rs  model.rs  runtime.rs  service.rs  tensor.rs  tokenizer.rs
