[package]
name = "neuronx-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.45.1"
thiserror = "2.0.12"
enum_primitive = "0.1.1"
num-traits = "0.2.19"
anyhow = "1.0.98"
memmap2 = "0.9.5"
ndarray = {version="0.16.1",optional=true}

[build-dependencies]
bindgen = "0.72.0"

[features]
ndl = []
service = ["dep:ndarray"]