[package]
name = "neuronx-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
enum_primitive = "0.1.1"
num-traits = "0.2.19"
log = "0.4.27"
memmap2 = "0.9.5"
tokio = {version="1.45.1",optional=true}
tokenizers = {version="0.21.1",optional=true}
ndarray = {version="0.16.1",optional=true}

[build-dependencies]
bindgen = "0.72.0"

[features]
ndl = []
tokenizer = ["dep:tokenizers","dep:ndarray"]
service = ["tokenizer","dep:tokio"]
hardware_testing = ["tokenizer"]